<?xml version="1.0" encoding="utf-8"?><!--
画面に表示される文字。
-->
<resources>
    <!--
    上部文字
    -->
    <string name="app_name">お気に入り店</string>
    <string name="action_settings">Settings</string>
    <string name="tv_title_list">ショップリスト</string>
    <!--
    <string name="btn_new">新規</string>
    -->
    <string name="menu_new">新規</string>

    <string name="tv_title_edit">ショップ情報編集</string>

    <string name="tv_title_insert">ショップ情報登録</string>
    <!--
    第２、３画面文字
    -->
    <string name="tv_input_name">店名：</string>
    <string name="tv_input_tel">TEL：</string>
    <string name="tv_input_url">URL：</string>
    <string name="tv_input_note">メモ：</string>

    <!--
    <string name="btn_save">更新</string>
    <string name="btn_insert">登録</string>
    -->

    <string name="menu_save">更新</string>

    <!--<string name="btn_back">戻る</string>-->

    <string name="menu_back">戻る</string>

    <!--
    <string name="btn_delete">削除</string>
    -->

    <string name="menu_delete">削除</string>

    <string name="menu_url">ブラウザ起動</string>
    <string name="msg_input_name">店名を入力してください。</string>
    <string name="msg_url_empty">URLが未入力です。</string>

</resources>
